# clockify-waybar-plugin

./: .pre-commit-config.yaml  clockify_waybar_plugin.py  pyproject.toml
