[tool.poetry]
name = "clockify-waybar-plugin"
version = "0.1.0"
description = ""
authors = ["Alex Dewar <a.dewar@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
clockify-api-client = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
